--- a/lib/x86_64-win64/u_gabarit.lfm
+++ b/lib/x86_64-win64/u_gabarit.lfm
@@ -39,8 +39,30 @@ object f_gabarit: Tf_gabarit
     Top = 30
     Width = 950
     Align = alRight
-    Caption = 'zone de travail'
+    ClientHeight = 720
+    ClientWidth = 950
     TabOrder = 2
+    object lbl_bienvenue: TLabel
+      Left = 1
+      Height = 628
+      Top = 91
+      Width = 948
+      Align = alClient
+      Alignment = taCenter
+      AutoSize = False
+      BorderSpacing.Top = 90
+      Caption = 'Bienvenue'#13#10#13#10'dans l''application de'#13#10#13#10'gestion de la Scolarité'
+      Font.CharSet = ANSI_CHARSET
+      Font.Color = clBlue
+      Font.Height = -80
+      Font.Name = 'Calibri'
+      Font.Pitch = fpVariable
+      Font.Quality = fqDraft
+      Font.Style = [fsBold, fsItalic]
+      ParentColor = False
+      ParentFont = False
+      OnClick = lbl_bienvenueClick
+    end
   end
   object pnl_selection: TPanel
     Left = 0
@@ -48,7 +70,6 @@ object f_gabarit: Tf_gabarit
     Top = 30
     Width = 250
     Align = alClient
-    Caption = 'zone de sélection'
     TabOrder = 3
   end
   object mnu_main: TMainMenu
