--- a/u_detail_inscrit.lfm
+++ b/u_detail_inscrit.lfm
@@ -121,6 +121,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 176
+        CharCase = ecUppercase
         OnEnter = edt_Enter
         OnExit = edt_nomExit
         TabOrder = 1
@@ -193,7 +194,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         ParentColor = False
       end
       object edt_adresse: TEdit
-        Left = 112
+        Left = 113
         Height = 23
         Top = 24
         Width = 316
@@ -206,6 +207,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 56
         Width = 80
+        MaxLength = 5
         OnEnter = edt_Enter
         OnExit = edt_postalExit
         TabOrder = 1
@@ -291,6 +293,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 85
+        MaxLength = 10
         NumbersOnly = True
         OnEnter = edt_Enter
         OnExit = edt_telExit
@@ -301,6 +304,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 88
+        MaxLength = 10
         NumbersOnly = True
         OnEnter = edt_Enter
         OnExit = edt_portExit
