--- a/u_detail_inscrit.lfm
+++ b/u_detail_inscrit.lfm
@@ -1,7 +1,7 @@
 object f_detail_inscrit: Tf_detail_inscrit
-  Left = 317
+  Left = 251
   Height = 720
-  Top = 112
+  Top = 671
   Width = 919
   Caption = 'Détail des inscriptions'
   ClientHeight = 720
@@ -345,6 +345,7 @@ object f_detail_inscrit: Tf_detail_inscrit
       ClientHeight = 96
       ClientWidth = 917
       TabOrder = 3
+      OnClick = pnl_filiereClick
       object lbl_filiere: TLabel
         Left = 1
         Height = 15
