--- a/lib/x86_64-win64/u_detail_inscrit.lfm
+++ b/lib/x86_64-win64/u_detail_inscrit.lfm
@@ -1,10 +1,10 @@
 object f_detail_inscrit: Tf_detail_inscrit
-  Left = 251
-  Height = 720
-  Top = 671
+  Left = 558
+  Height = 717
+  Top = 60
   Width = 919
   Caption = 'Détail des inscriptions'
-  ClientHeight = 720
+  ClientHeight = 717
   ClientWidth = 919
   OnShow = FormShow
   ParentFont = True
@@ -21,7 +21,7 @@ object f_detail_inscrit: Tf_detail_inscrit
   object pnl_btn: TPanel
     Left = 0
     Height = 40
-    Top = 680
+    Top = 677
     Width = 919
     Align = alBottom
     ClientHeight = 40
@@ -57,11 +57,11 @@ object f_detail_inscrit: Tf_detail_inscrit
   end
   object pnl_detail: TPanel
     Left = 0
-    Height = 654
+    Height = 651
     Top = 26
     Width = 919
     Align = alClient
-    ClientHeight = 654
+    ClientHeight = 651
     ClientWidth = 919
     TabOrder = 2
     object pnl_ident: TPanel
@@ -121,7 +121,6 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 176
-        CharCase = ecUppercase
         OnEnter = edt_Enter
         OnExit = edt_nomExit
         TabOrder = 1
@@ -149,6 +148,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         OnChange = cbb_genreChange
         TabOrder = 3
         Text = 'M'
+        Visible = False
       end
       object lbl_num_erreur: TLabel
         Left = 113
@@ -174,6 +174,15 @@ object f_detail_inscrit: Tf_detail_inscrit
         Caption = 'lbl_prenom_erreur'
         ParentColor = False
       end
+      object edt_genre: TEdit
+        Left = 232
+        Height = 23
+        Top = 48
+        Width = 80
+        ReadOnly = True
+        TabOrder = 4
+        Visible = False
+      end
     end
     object pnl_adresse: TPanel
       Left = 1
@@ -194,7 +203,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         ParentColor = False
       end
       object edt_adresse: TEdit
-        Left = 113
+        Left = 112
         Height = 23
         Top = 24
         Width = 316
@@ -207,7 +216,6 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 56
         Width = 80
-        MaxLength = 5
         OnEnter = edt_Enter
         OnExit = edt_postalExit
         TabOrder = 1
@@ -293,7 +301,6 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 85
-        MaxLength = 10
         NumbersOnly = True
         OnEnter = edt_Enter
         OnExit = edt_telExit
@@ -304,7 +311,6 @@ object f_detail_inscrit: Tf_detail_inscrit
         Height = 23
         Top = 48
         Width = 88
-        MaxLength = 10
         NumbersOnly = True
         OnEnter = edt_Enter
         OnExit = edt_portExit
@@ -345,7 +351,6 @@ object f_detail_inscrit: Tf_detail_inscrit
       ClientHeight = 96
       ClientWidth = 917
       TabOrder = 3
-      OnClick = pnl_filiereClick
       object lbl_filiere: TLabel
         Left = 1
         Height = 15
@@ -389,15 +394,25 @@ object f_detail_inscrit: Tf_detail_inscrit
         ItemHeight = 15
         TabOrder = 0
         Text = 'cbb_filiere'
+        Visible = False
+      end
+      object edt_filiere: TEdit
+        Left = 112
+        Height = 23
+        Top = 40
+        Width = 144
+        ReadOnly = True
+        TabOrder = 1
+        Visible = False
       end
     end
     object pnl_releve: TPanel
       Left = 1
-      Height = 221
+      Height = 218
       Top = 432
       Width = 917
       Align = alClient
-      ClientHeight = 221
+      ClientHeight = 218
       ClientWidth = 917
       TabOrder = 4
       object pnl_releve_titre: TPanel
@@ -429,7 +444,7 @@ object f_detail_inscrit: Tf_detail_inscrit
       end
       object pnl_releve_list: TPanel
         Left = 1
-        Height = 180
+        Height = 177
         Top = 40
         Width = 551
         Align = alLeft
