--- a/u_detail_inscrit.lfm
+++ b/u_detail_inscrit.lfm
@@ -1,7 +1,7 @@
 object f_detail_inscrit: Tf_detail_inscrit
-  Left = 945
+  Left = 558
   Height = 717
-  Top = 329
+  Top = 60
   Width = 919
   Caption = 'Détail des inscriptions'
   ClientHeight = 717
@@ -148,6 +148,7 @@ object f_detail_inscrit: Tf_detail_inscrit
         OnChange = cbb_genreChange
         TabOrder = 3
         Text = 'M'
+        Visible = False
       end
       object lbl_num_erreur: TLabel
         Left = 113
@@ -172,6 +173,15 @@ object f_detail_inscrit: Tf_detail_inscrit
         Width = 96
         Caption = 'lbl_prenom_erreur'
         ParentColor = False
+      end
+      object edt_genre: TEdit
+        Left = 232
+        Height = 23
+        Top = 48
+        Width = 80
+        ReadOnly = True
+        TabOrder = 4
+        Visible = False
       end
     end
     object pnl_adresse: TPanel
@@ -384,6 +394,16 @@ object f_detail_inscrit: Tf_detail_inscrit
         ItemHeight = 15
         TabOrder = 0
         Text = 'cbb_filiere'
+        Visible = False
+      end
+      object edt_filiere: TEdit
+        Left = 112
+        Height = 23
+        Top = 40
+        Width = 144
+        ReadOnly = True
+        TabOrder = 1
+        Visible = False
       end
     end
     object pnl_releve: TPanel
